# chess-opening-explorer

./: .gitignore  API.md  README.md  TESTCOVERAGE.md  manage.py  pyproject.toml
chess_core/: admin.py  apps.py  models.py  repositories.py  views.py
chess_core/api/: __init__.py  router.py  schemas.py
chess_core/behaviors/: __init__.py  endgame.py
chess_core/migrations/: 0001_initial.py  0002_game_opening_ply_opening_game_opening.py  0003_remove_game_opening_ply.py  0004_add_move_count_and_indexes.py  0005_rename_move_count_to_move_count_ply.py  0006_alter_game_table_alter_opening_table.py  0007_add_endgame_move_ply_and_endgame_fen.py
chess_core/parsers/: base.py  pgn.py
chess_core/services/: __init__.py  endgame.py  latest_game.py  move_parsing.py  opening_game_details.py  opening_stats.py  openings.py  win_rate_over_time.py
chess_core/templates/: base.html  explore.html  latest_game.html
chess_core/tests/: __init__.py  conftest.py  factories.py  test_behaviors.py  test_commands.py  test_explore_openings_chart_span.py  test_explore_views.py  test_latest_game.py  test_models.py  test_opening_game_details.py  test_opening_stats_api.py  test_opening_stats_service.py  test_parsers.py  test_repositories.py  test_services.py  test_win_rate_over_time.py
chess_explorer/: asgi.py  settings.py  urls.py  wsgi.py
games/: admin.py  models.py  repositories.py
games/api/: __init__.py  router.py  schemas.py
games/migrations/: 0001_initial.py  0002_game_opening_ply_opening_game_opening.py  0003_remove_game_opening_ply.py  0004_add_move_count_and_indexes.py  (+1 more)
(+30 files in other folders)
